<resources>
    <string name="app_name">RepTel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="num_tel">Num Tel</string>
    <string name="confirmation_mot_de_passe">Confirmation Mot de Passe</string>
    <string name="pr_nom_nom">Prénom Nom</string>
    <string name="s_enregistrer">S\'ENREGISTRER</string>
    <string name="se_connecter">SE CONNECTER</string>
    <string name="entrez_le_code_otp">Entrez le code OTP</string>
    <string name="continuer">Continuer</string>
    <string name="annonce">Message d\'Accueil</string>
    <string name="messages">Messages Receptionnés</string>
    <string name="bienvenue_dans_votre">Bienvenue dans votre</string>
    <string name="r_pondeur_t_l_phonique">Répondeur Téléphonique</string>
    <string name="personnel">personnel</string>
    <string name="message_de_l_annonce">MESSAGE D\'ACCUEIL</string>
    <string name="param_trez_votre">Enregistrez votre</string>
    <string name="message_d_acceuil">Message d\'Accueil</string>
    <string name="textview">TextView</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="ecouter">Ecouter</string>
    <string name="rec">REC</string>
    <string name="jouer">PLAY</string>
    <string name="email">E-mail</string>
    <string name="erreurnom">Entrez vos prénom et nom</string>
    <string name="search">Rechercher</string>
    <string name="press_back_to_exit">Presser retour une seconde fois pour sortir</string>
</resources>